tests/baselines/reference/callConstructAssignment.errors.txt
tests/cases/compiler/callConstructAssignment.ts(5,1): error TS2322: Type '新建 () => 任意' is not assignable to type '() => 无值'.
  Type '新建 () => 任意' provides no match for the signature '(): void'.
tests/cases/compiler/callConstructAssignment.ts(6,1): error TS2322: Type '() => 无值' is not assignable to type '新建 () => 任意'.
  Type '() => 无值' provides no match for the signature 'new (): any'.


==== tests/cases/compiler/callConstructAssignment.ts (2 errors) ====
    var foo:{ ( ):void; }
    
    var bar:{ new ( ):any; }
    
    foo = bar; // error
    ~~~
!!! error TS2322: Type '新建 () => 任意' is not assignable to type '() => 无值'.
!!! error TS2322:   Type '新建 () => 任意' provides no match for the signature '(): void'.
    bar = foo; // error
    ~~~
!!! error TS2322: Type '() => 无值' is not assignable to type '新建 () => 任意'.
!!! error TS2322:   Type '() => 无值' provides no match for the signature 'new (): any'.